Fixed the spacing on the homepage which was pushing the welcome message far down on the screen.

--- a/gig_calendar/static/gig_calendar/style.css
+++ b/gig_calendar/static/gig_calendar/style.css
@@ -61,7 +61,6 @@ h1, h2, h3, h4 {
 .homepage-gig {
     position: relative;
     width: 100%;
-    height: 100%;
 }
 
 .gig-calendar h1 {
